<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="130dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etPhoneNumberHint"
        android:inputType="phone" />

    <Button
        android:id="@+id/btnDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="122dp"
        android:text="@string/btnDial" />

    <Button
        android:id="@+id/btnContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="51dp"
        android:text="@string/btnContacts" />

    <TextView
        android:id="@+id/tv_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="201dp"
        android:layout_marginLeft="201dp"
        android:layout_marginTop="66dp"
        tools:text="wybrany kontakt" />

    <EditText
        android:id="@+id/etMessageContact"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etSendMessageHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etStudentHint"
        android:inputType="number" />

    <Button
        android:id="@+id/btnMessageContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="338dp"
        android:text="@string/btnSendMessage" />

    <EditText
        android:id="@+id/etMessageContent"
        android:layout_width="244dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="263dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etMessageContentHint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="117dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/btnClear" />

    <EditText
        android:id="@+id/etLat"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:layout_marginBottom="235dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etLatHint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnGeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="232dp"
        android:text="@string/btnGeo" />

    <EditText
        android:id="@+id/etLon"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="237dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/etLonHint"
         />

    <Button
        android:id="@+id/btnStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="141dp"
        android:text="@string/btnStudent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:textColor="#A51212"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Jakub" />

</RelativeLayout>