<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="278dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="265dp"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/etLoginHint"
        android:inputType="textPersonName"
        android:textSize="25sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="152dp"
        android:layout_height="81dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:text="@string/btnLogin"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="247dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="55dp"
        android:text="@string/tvHello"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvLoginResponse"
        android:layout_width="231dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="276dp"
        android:gravity="center"
        android:textSize="30sp"
        tools:text="Cześć Jakub!" />
</RelativeLayout>